plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.search'
version = '1.0.0'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // OpenSearch
    implementation 'org.opensearch.client:opensearch-rest-client:2.11.0'
    implementation 'org.opensearch.client:opensearch-java:2.8.0'

    // Spring JDBC
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    // MariaDB
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.3.1'

    // Netty for macOS DNS resolution optimization
    runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.100.Final:osx-aarch_64'
    // For Intel Macs, use 'osx-x86_64' classifier instead:
    // runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.100.Final:osx-x86_64'

    // JSON Processing
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // Apache Tika (File Content Extraction)
    implementation 'org.apache.tika:tika-core:2.9.1'
    implementation 'org.apache.tika:tika-parsers-standard-package:2.9.1'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Configuration Processor
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Logging
    implementation 'org.slf4j:slf4j-api'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}